tests/baselines/reference/parser_continueTarget6.errors.txt
==== tests/cases/compiler/parser_continueTarget6.ts (1 errors) ====
    while (true) {
      continue target;
      ~~~~~~~~~~~~~~~~
!!! parser_continueTarget6.ts(2,3): error TS1106: Jump target not found.
    }